# seaweedfs-rs

./: Cargo.toml  README.md  build.rs
proto/: filer.proto  master.proto  volume.proto
src/: lib.rs
