[package]
name = "seaweedfs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/divinerapier/seaweedfs-rs"
description = """
Client for SeaweedFS.
"""
homepage = "https://github.com/divinerapier/seaweedfs-rs"
documentation = "https://docs.rs/seaweedfs"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.1.0-alpha.5"

[dependencies]
tonic = { version = "0.1.0-alpha.5", features = ["rustls"] }
bytes = "0.4"
prost = "0.5"

tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"
